RESOLVED FIXED128055
WK2: Cannot focus a second field in a page after the first has been focused.
https://bugs.webkit.org/show_bug.cgi?id=128055
Summary WK2: Cannot focus a second field in a page after the first has been focused.
Enrica Casucci
Reported 2014-02-01 18:58:56 PST
Open Facebook.com. Tap on the username, then tap on the password field. The focus does not move. <rdar://problem/15943652>
Attachments
Patch (1.91 KB, patch)
2014-02-01 19:03 PST, Enrica Casucci
simon.fraser: review+
Enrica Casucci
Comment 1 2014-02-01 19:03:18 PST
Enrica Casucci
Comment 2 2014-02-02 12:32:48 PST
Committed revision 163269.
Note You need to log in before you can comment on or make changes to this bug.