WK2: Cannot focus a second field in a page after the first has been focused. https://bugs.webkit.org/show_bug.cgi?id=128055 <rdar://problem/15943652>

Reviewed by Simon Fraser.

When handling singleTap, we always need to send
a click to WebKit when we are already interacting with text.
Also, when we stop assisting the node, we should not call
resign responder, since that will trigger another unwanted blur.

* UIProcess/API/ios/WKInteractionView.mm:
(-[WKInteractionView _singleTapRecognized:]):
(-[WKInteractionView _stopAssistingNode]):



Canonical link: https://commits.webkit.org/146087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163269 268f45cc-cd09-0410-ab3c-d52691b4dbfc